--- a/scripts/ldjson/en/index/softwareapplication.json
+++ b/scripts/ldjson/en/index/softwareapplication.json
@@ -11,5 +11,5 @@
     "priceCurrency": "USD"
   },
   "softwareVersion": "1.0.0",
-  "url": "https://websimstarter.borninsea.com/"
+  "url": "https://websimstarter.metaprompt.deepsseek.diy/"
 }
