--- a/scripts/ldjson/zh-CN/index/softwareapplication.json
+++ b/scripts/ldjson/zh-CN/index/softwareapplication.json
@@ -11,12 +11,12 @@
     "price": "0",
     "priceCurrency": "CNY"
   },
-  "url": "https://websimstarter.borninsea.com/zh/index.html",
-  "downloadUrl": "https://websimstarter.borninsea.com/zh/index.html",
+  "url": "https://websimstarter.metaprompt.deepsseek.diy/zh/index.html",
+  "downloadUrl": "https://websimstarter.metaprompt.deepsseek.diy/zh/index.html",
   "publisher": {
     "@type": "Organization",
     "name": "MoodWheel 团队",
-    "url": "https://websimstarter.borninsea.com"
+    "url": "https://websimstarter.metaprompt.deepsseek.diy"
   },
   "featureList": [
     "情绪轮盘导航",
